# iSchool

./: .gitignore  CMakeLists.txt  assets.qrc  fonts.qrc  iSchool.pro  images.qrc  main.cpp  qml.qrc  qmldir
backend/: Backend.cpp  Backend.h
lib/: version.h
lib/database/: dbman.cpp  dbman.h
resources/: About.qml  ToolbarModule.qml
ui/: template.qml
ui/about/: About.qml
ui/base/: Base.js  Base.qml  BaseDelete.qml  BaseInsert.qml  BaseUpdate.qml  BaseWidget.qml
ui/branch/: BranchDelete.qml  BranchInsert.qml  BranchWidget.qml  Branches.js  Branches.qml  UpdateBranch.qml
ui/class/: Class.js  Class.qml  ClassCSEval.qml  ClassCourses.qml  ClassDelete.qml  ClassDetail.qml  ClassDetailDelete.qml  ClassDetailInsert.qml  ClassDetailUpdate.qml  ClassInsert.qml  ClassSCEval.qml  ClassSCEval0.qml  ClassStudentCourses.qml  ClassStudents.qml  ClassUpdate.qml  StudentStatDrawer.qml  StudentStatPdfReport.qml
ui/class0/: Class.js  Class.qml  ClassCSEval.qml  ClassDelete.qml  ClassDetail.qml  ClassDetailDelete.qml  ClassDetailUpdate.qml  ClassInsert.qml  ClassSCEval.qml  ClassSCEval0.qml  ClassStudentCourses.qml  ClassStudents.qml  ClassUpdate.qml  StudentStatDrawer.qml  StudentStatPdfReport.qml
ui/course/: Course.js  CourseDelete.qml  CourseInsert.qml  CourseUpdate.qml  CourseUpdate0.qml  Courses.qml  Courses0.qml
ui/evaluation/: EvalCatDelete.qml  EvalCatInsert.qml  EvalCatUpdate.qml  EvalCats.qml  EvalDelete.qml  EvalInsert.qml  EvalStudents.qml  EvalUpdate.qml  Evals.js  Evals.qml  Evals0.qml  EvalsCourses.qml
ui/field/: FieldDelete.qml  FieldInsert.qml  FieldUpdate.qml  Fields.qml
ui/home/: About.qml  BaseAvg.qml  BasePage.qml  ClassCoursePage.qml  ClassPage.qml  ClassReport.qml  ClassStudentPage.qml  ClassTranscriptsSetting.qml  CourseStudentsList.qml  FieldPage.qml  HomePage.qml  HomeWindow.qml  MenubarModule.qml  PeriodPage.qml  Rank.qml  StepsPage.qml  StudentCoursesList.qml  StudentResultSetting.qml  StudentTranscriptSetting.qml  ToolbarModule.qml  qmldir
ui/login/: InitialLogin.qml  LoginForm.qml  LoginWindow.qml  NewRelease.qml  NoConnection.qml  OnMaintenance.qml  qmldir
ui/period/: Period.js  PeriodDelete.qml  PeriodInsert.qml  PeriodUpdate.qml  PeriodWidget.qml  Periods.qml
ui/public/: BaseDialog.qml
ui/step/: Step.js  StepDelete.qml  StepInsert.qml  StepUpdate.qml  StepWidget.qml  Steps.qml
ui/student/: FilterDelegate.qml  Register.qml  Register0.qml  RegisterDelete.qml  Registrations.qml  Student.js  Student.qml  StudentCourseDelete.qml  StudentCourseEval.qml  StudentCourseInsert.qml  StudentCourses.qml  StudentDelete.qml  StudentInsert.qml  StudentUpdate.qml  Students.js  Students.qml
ui/student_evals/: StudentsEvals.js  StudentsEvals.qml
ui/teacher/: Teacher.qml  TeacherDelete.qml  TeacherInsert.qml  TeacherUpdate.qml  Teachers.js  Teachers.qml
ui/tips/: class  teacher
ui/user/: ChangePassDialogBox.qml  ChangePassword.qml  ListUser.js  ListUser.qml  ListUser0.qml  NewUser.qml  NewUser0.qml  NewUserJS.js  User.js  User.qml  User0.qml  UserDelete.qml  UserModify.js  UserModify.qml  UserModify0.qml  UsersListWidget.qml  qmldir
